@@ -1,5 +1,13 @@
 2018-01-14  Bruno Haible  <bruno@clisp.org>
 
+	Enable most optimizations on FreeBSD/i386.
+	* Makefile.devel (multibuild-freebsd-i386): Enable all build variants
+	that work.
+	* makemake.in (XCFLAGS): For FreeBSD/i386, enable all optimizations
+	except ASM.
+
+2018-01-14  Bruno Haible  <bruno@clisp.org>
+
 	Enable most optimizations on Linux/mips64.
 	* Makefile.devel (multibuild-linux-mips-64): Renamed from
 	multibuild-linux-mipseb-64 and multibuild-linux-mipsel-64. Enable all
